; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_twophase.c_TwoPhaseShmemSize.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_twophase.c_TwoPhaseShmemSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TwoPhaseStateData = common dso_local global i32 0, align 4
@prepXacts = common dso_local global i32 0, align 4
@max_prepared_xacts = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TwoPhaseShmemSize() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @TwoPhaseStateData, align 4
  %3 = load i32, i32* @prepXacts, align 4
  %4 = call i32 @offsetof(i32 %2, i32 %3)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = load i32, i32* @max_prepared_xacts, align 4
  %7 = call i32 @mul_size(i32 %6, i32 4)
  %8 = call i32 @add_size(i32 %5, i32 %7)
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @MAXALIGN(i32 %9)
  store i32 %10, i32* %1, align 4
  %11 = load i32, i32* %1, align 4
  %12 = load i32, i32* @max_prepared_xacts, align 4
  %13 = call i32 @mul_size(i32 %12, i32 4)
  %14 = call i32 @add_size(i32 %11, i32 %13)
  store i32 %14, i32* %1, align 4
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @offsetof(i32, i32) #1

declare dso_local i32 @add_size(i32, i32) #1

declare dso_local i32 @mul_size(i32, i32) #1

declare dso_local i32 @MAXALIGN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
